feat: add drizzle configuration and SQLite schema for posts
- Created drizzle.config.ts for database configuration.
- Added dependencies for drizzle-orm and libsql client in package.json.
- Implemented posts schema in src/db/schema.ts with fields for id, title, content, summary, slug, createAt, and updateAt.
- Initialized drizzle ORM in src/index.ts to connect to the SQLite database.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-# deps
+# 数据库文件
+*.sqlite
+*.sqlite-journal
+*.sqlite-shm
+*.sqlite-wal
+
+
+# 环境配置文件
+.env
+.env.local
+.env.*.local
+
+# 依赖包
 node_modules/
+
+# Bun 运行时相关
+bun.lockb
+.DS_Store
