--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.3.5",
+    "drizzle-kit": "^0.31.8"
   }
 }
