--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "drizzle-orm": "^0.45.1",
         "hono": "^4.11.3",
         "pg": "^8.16.3",
+        "pino": "^10.1.0",
         "zod": "^4.2.1"
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.10",
         "@types/bun": "^1.3.5",
-        "drizzle-kit": "^0.31.8"
+        "drizzle-kit": "^0.31.8",
+        "pino-pretty": "^13.1.3"
     }
 }
