feat: update environment variable handling and improve logging for security warnings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=your_database_url
 DEFAULT_ADMIN_PASSWORD=your_secure_admin_password
 JWT_SECRET=your_jwt_secret_key
+BUN_ENV=production
