--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@scalar/hono-api-reference": "^0.9.30",
         "drizzle-orm": "^0.45.1",
         "hono": "^4.11.3",
+        "hono-rate-limiter": "^0.5.3",
         "pg": "^8.16.3",
         "pino": "^10.1.0",
         "zod": "^4.2.1"
