--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "my-api",
     "scripts": {
-        "dev": "bun run --hot src/index.ts"
+        "dev": "bun run --hot src/index.ts",
+        "check": "biome check --write ."
     },
     "dependencies": {
         "@hono/zod-openapi": "^1.2.0",
