--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
         "moduleResolution": "bundler",
         "strict": true,
         "jsx": "react-jsx",
-        "jsxImportSource": "hono/jsx"
-    }
+        "jsxImportSource": "hono/jsx",
+        "skipLibCheck": true,
+        "types": ["bun", "node"],
+        "lib": ["ESNext", "DOM", "DOM.Iterable"]
+    },
+    "exclude": ["node_modules"]
 }
