feat: add Dockerignore, update environment variables, enhance CORS support, and improve post service queries

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "my-api",
     "scripts": {
         "dev": "bun run --hot src/index.ts",
-        "check": "biome check --write ."
+        "check": "biome check --write .",
+        "generate": "drizzle-kit generate"
     },
     "dependencies": {
         "@hono/zod-openapi": "^1.2.0",
