--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL=your_database_url
 DEFAULT_ADMIN_PASSWORD=your_secure_admin_password
 JWT_SECRET=your_jwt_secret_key
 NODE_ENV=production
+PORT=3000
