--- a/admin-web/biome.json
+++ b/admin-web/biome.json
@@ -30,5 +30,11 @@
 				"organizeImports": "on"
 			}
 		}
-	}
+	},
+	"css": {
+    "parser": {
+      "cssModules": true,
+      "tailwindDirectives": true 
+    }
+  }
 }
