--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
