feat: update dependencies and refactor UI components
- Added new dependencies: @radix-ui/react-dialog, @radix-ui/react-separator, @radix-ui/react-tooltip, and @tanstack/react-query.
- Removed App.css and refactored App.tsx to use a new layout structure.
- Created new UI components: Separator, Sheet, Sidebar, Skeleton, and Tooltip.
- Implemented Sidebar context for managing sidebar state and mobile responsiveness.
- Added useIsMobile hook for detecting mobile view.
- Introduced API client setup in lib/api.ts and updated index.ts to define application routes.

--- a/admin-web/biome.json
+++ b/admin-web/biome.json
@@ -1,4 +1,5 @@
 {
+	"root": false,
 	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
 	"vcs": {
 		"enabled": true,
@@ -32,9 +33,8 @@
 		}
 	},
 	"css": {
-    "parser": {
-      "cssModules": true,
-      "tailwindDirectives": true 
-    }
-  }
+		"parser": {
+			"tailwindDirectives": true
+		}
+	}
 }
