--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@hono/zod-openapi": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
@@ -20,11 +21,13 @@
 		"@tanstack/react-query": "^5.90.16",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"hono": "^4.11.3",
 		"lucide-react": "^0.562.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"zod": "^4.3.5"
 	},
 	"devDependencies": {
 		"@types/node": "^24.10.1",
