feat: add sidebar component with context and hooks for mobile support
- Implemented Sidebar component with collapsible and mobile-friendly features.
- Created SidebarProvider for managing sidebar state and keyboard shortcuts.
- Added SidebarTrigger, SidebarRail, and various sidebar-related subcomponents.
- Introduced Skeleton component for loading states.
- Added Textarea and Tooltip components for enhanced UI interactions.
- Developed useIsMobile hook to detect mobile viewport.
- Established global styles in index.css with Tailwind CSS and custom properties.
- Set up API client for backend communication.
- Created utility functions for class name management.
- Configured TypeScript settings for app and node environments.
- Integrated Vite for build tooling with React and Tailwind CSS support.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,4 +13,4 @@ RUN mkdir -p /app/data
 
 EXPOSE 3000
 
-ENTRYPOINT ["sh", "-c", "bunx drizzle-kit push && bun run src/index.ts"]
+ENTRYPOINT ["sh", "-c", "bunx drizzle-kit push && bun run ./src/index.ts"]
