--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
     "formatter": {
         "enabled": true,
