--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
     "name": "my-api",
     "scripts": {
-        "start": "bun run src/index.ts",
-        "dev": "bun run --hot src/index.ts",
+        "start": "bun run ./src/index.ts",
+        "dev": "bun run --hot ./src/index.ts",
         "check": "biome check --write .",
         "generate": "drizzle-kit generate"
     },
