--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,8 +11,11 @@ on:
     branches: [main]
 
 jobs:
-  quality-check:
+  backend:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - uses: actions/checkout@v4
       
@@ -29,6 +32,23 @@ jobs:
       - name: Type Check
         run: bunx tsc --noEmit
 
-      # 配置太麻烦了，以后再看
-      # - name: Run Tests
-      #   run: bun test
+  frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Run Lint (Biome)
+        run: bunx @biomejs/biome ci .
+
+      - name: Type Check
+        run: bunx tsc --noEmit
