--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "hono": "^4.11.3",
         "hono-rate-limiter": "^0.5.3",
         "pino": "^10.1.0",
+        "pinyin-pro": "^3.27.0",
         "zod": "^4.2.1"
     },
     "devDependencies": {
