feat: add test execution step in CI workflow and update UUID generation in post tests

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,14 @@ jobs:
       - name: Type Check
         run: bunx tsc --noEmit
 
+      - name: Run Tests
+        env:
+          DATABASE_URL: "test.db"
+          DEFAULT_ADMIN_PASSWORD: "admin123456"
+        run: |
+          bunx drizzle-kit push
+          bun test
+
   frontend:
     runs-on: ubuntu-latest
     defaults:
