chore: update frontend package.json to remove TypeScript build step and add backend dependency
fix: modify api.ts to use dynamic base URL for API client

feat: add root package.json for workspace management with backend and frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
-    "name": "my-api",
+    "name": "@my-api/backend",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "types": "src/index.ts",
     "scripts": {
         "start": "bun run ./src/index.ts",
         "dev": "bun run --hot ./src/index.ts",
@@ -9,6 +12,7 @@
     "dependencies": {
         "@hono/zod-openapi": "^1.2.0",
         "@hono/zod-validator": "^0.7.6",
+        "@libsql/client": "^0.17.0",
         "@scalar/hono-api-reference": "^0.9.30",
         "drizzle-orm": "^0.45.1",
         "hono": "^4.11.3",
