--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
       - main
     paths:
       - 'backend/**'
+      - 'frontend/**'
+      - 'package.json'
+      - 'Dockerfile'
 
 jobs:
   build:
@@ -28,6 +31,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}-backend:latest
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
