--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"check": "biome check --write ."
 	},
 	"dependencies": {
+		"@my-api/backend": "workspace:*",
 		"@biomejs/biome": "^2.3.11",
 		"@hono/zod-openapi": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.15",
