--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -56,6 +56,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run Lint (Biome)
+        continue-on-error: true
         run: bunx @biomejs/biome ci .
 
       - name: Type Check
