--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
-		"@vitejs/plugin-react-swc": "^4.2.2",
+		"@vitejs/plugin-react": "^5.1.2",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4"
