--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
 		"check": "biome check --write ."
 	},
 	"dependencies": {
-		"@my-api/backend": "workspace:*",
 		"@biomejs/biome": "^2.3.11",
 		"@hono/zod-openapi": "^1.2.0",
+		"@my-api/backend": "workspace:*",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
@@ -28,6 +28,7 @@
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
+		"vite-plugin-svgr": "^4.5.0",
 		"zod": "^4.3.5"
 	},
 	"devDependencies": {
