--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
 		"clsx": "^2.1.1",
 		"hono": "^4.11.3",
 		"lucide-react": "^0.562.0",
+		"next-themes": "^0.4.6",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-router-dom": "^7.12.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
 		"vite-plugin-svgr": "^4.5.0",
