style: convert indentation from spaces to tabs across the codebase
The change standardizes indentation to tabs for consistency throughout the project. This affects configuration files, backend services, routes, schemas, and frontend components. The biome.json was also updated to disable explicit any linting rule.

--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,9 +1,14 @@
 {
-    "root": true,
-    "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
-    "formatter": {
-        "enabled": true,
-        "indentStyle": "space",
-        "indentWidth": 4
-    }
+	"root": true,
+	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+	"formatter": {
+		"enabled": true
+	},
+	"linter": {
+		"rules": {
+			"suspicious": {
+				"noExplicitAny": "off"
+			}
+		}
+	}
 }
