--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
+    "@fontsource-variable/inter": "^5.2.8",
     "@hono/zod-openapi": "^1.2.0",
     "@my-api/backend": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@remixicon/react": "^4.8.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
@@ -24,9 +28,11 @@
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
+    "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
