feat: Switched from slug to ID for post lookups, as memos lack slugs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,8 @@
     { "rule": "*-newline", "severity": "off", "fixable": true },
     { "rule": "*quotes", "severity": "off", "fixable": true },
     { "rule": "*semi", "severity": "off", "fixable": true }
-  ]
+  ],
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  }
 }
