--- a/backend/package.json
+++ b/backend/package.json
@@ -6,30 +6,31 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "start": "bun run ./src/index.ts",
-    "dev": "bun run --hot ./src/index.ts",
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy",
     "lint": "eslint .",
     "format": "eslint . --fix",
-    "generate": "drizzle-kit generate"
+    "generate": "drizzle-kit generate",
+    "migrate:local": "wrangler d1 migrations apply my-api-db --local",
+    "migrate:remote": "wrangler d1 migrations apply my-api-db --remote",
+    "db:studio": "drizzle-kit studio",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.0",
     "@hono/zod-validator": "^0.7.6",
-    "@libsql/client": "^0.17.0",
     "@scalar/hono-api-reference": "^0.9.30",
-    "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
-    "hono-rate-limiter": "^0.5.3",
-    "pino": "^10.1.0",
     "pinyin-pro": "^3.27.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.0.1",
-    "@types/bun": "^1.3.5",
+    "@cloudflare/workers-types": "^4.20241230.0",
     "@types/node": "^25.0.3",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.18.0",
-    "pino-pretty": "^13.1.3"
+    "wrangler": "^3.99.0"
   }
 }
