docs: update README for deployment instructions and database setup; add logging commands to package.json feat(auth): enhance user registration handler with database initialization check chore: update wrangler.toml for improved environment configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "generate": "drizzle-kit generate",
     "migrate:local": "wrangler d1 migrations apply DB --local -e development",
     "migrate:dev": "wrangler d1 migrations apply DB --remote -e development",
-    "migrate:remote": "wrangler d1 migrations apply DB --remote -e production",
+    "migrate:remote": "wrangler d1 migrations apply DB --remote",
     "db:studio": "drizzle-kit studio",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "logs": "wrangler tail",
+    "logs:dev": "wrangler tail -e development"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.0",
