--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -2,19 +2,23 @@ name = "my-api-backend"
 main = "src/index.ts"
 compatibility_date = "2026-02-02"
 compatibility_flags = ["nodejs_compat"]
+workers_dev = true
+preview_urls = true
+
+# 生产环境配置（默认环境）
+vars = { ALLOWED_ORIGINS = "https://your-production-domain.com" }
+[[d1_databases]]
+binding = "DB"
+database_name = "my-api-db"
+database_id = "afd970f6-6cba-491c-8f8f-6b4a8660f1b0"
+migrations_dir = "drizzle"
 
 [env.development]
+name = "my-api-backend-dev"
 vars = { ALLOWED_ORIGINS = "http://localhost:5173,http://127.0.0.1:5173" }
 [[env.development.d1_databases]]
 binding = "DB"
 database_name = "my-api-db-dev"
-database_id = "23cae663-3c74-47a8-81f4-0daf09c5d4bc"
+database_id = "9e3e885a-5440-499a-b547-abfd868511e4"
 migrations_dir = "drizzle"
 
-[env.production]
-vars = { ALLOWED_ORIGINS = "https://your-production-domain.com" }
-[[env.production.d1_databases]]
-binding = "DB"
-database_name = "my-api-db"
-database_id = "937030fe-b3df-4aa7-b338-9ded33017ffa"
-migrations_dir = "drizzle"
