--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,6 +35,13 @@ jobs:
         working-directory: backend
         run: pnpm exec tsc --noEmit
 
+      - name: Backend Test Type Check
+        working-directory: backend
+        run: npx tsc -p test/tsconfig.json --noEmit
+
+      - name: Run Backend Tests
+        run: pnpm --filter @my-api/backend test
+
       - name: Frontend Type Check
         working-directory: frontend
         run: pnpm exec tsc --noEmit
