--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@eslint-react/eslint-plugin": "^2.9.4",
     "@fontsource-variable/inter": "^5.2.8",
     "@hono/zod-openapi": "^1.2.0",
     "@milkdown/crepe": "^7.18.0",
@@ -26,6 +27,7 @@
     "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
