--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "cf-typegen": "wrangler types",
     "logs": "wrangler tail",
     "logs:dev": "wrangler tail -e development",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.1",
@@ -37,8 +38,15 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^25.2.0",
     "drizzle-kit": "^0.31.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "typescript": "~5.9.3",
     "vitest": "~3.2.0",
     "wrangler": "^4.62.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,jsx,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
